FlightPath 6.x Changelog
========================

2024-03-20
  To fix security vulnerabilities, upgraded jQuery UI and jQuery to higher versions.
  
  To fix XSS vulnerability, modified Content module to disallow dangerous HTML (like script tags)
  in titles.


2024-01-26
  Fixing warnings (backport from FP7x) 
  

2023-12-13
  Made the "view_fpm_debug" permission admin_restricted.
  

2023-12-06
  Small change to how invite.ics files are created in calendar.module, to ensure UID is unique.  Also
  set SEQUENCE number, to future-proof in case we want to send cancellation invite.ics one day.
  

2023-12-02
  Small change in advise.js to escape DOM input for added security.


2023-12-01
  Fixed bug in alerts module where $user was not being read correctly.
  

2023-11-30
  Made further modifications to the Advisor Use report, adding the ability to select only unique student advisings.
  
  Modified style.css to allow for shorter (less wide) select lists.
  
  Added "spinner" graphic to submit button for FlightPath Use Summary and other reports that use the date range select form.
  
  Modified FlightPath Use Summary to use Advisor Use results for better accuracy.
  

2023-11-29
  Made modifications to watchdog entries when an advising session is saved (to contain the advising session token).
  
  Made changes to the Advisor Use report to show number of advisings per term.
  

2023-11-06
  Made it so pages can request that "messages" (from fp_add_message) are not shown, by adding ?fp_messages=none to the URL.  Useful in iframes.
  

2023-10-25
  Modified stats.module, so that the "FlightPath Use Summary" report looks at "display_dashboard" to determine logins, 
  rather than "login" entries in the watchdog table, as that is not an accurate count if the user used SAML or LDAP to
  log in.
  
  Also modified this report to no longer display "mobile" user counts, as this is deprecated and will not be used
  in the future.
   

2023-08-07